--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>New User Signup</h1>
     <form>
         <input type="text" name="username" placeholder="username">
         <p>Username must contain between 5 - 12 characters</p>
