--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <input type="text" name="email" placeholder="email">
         <p>Email must be a valid email address, e.g. me@mydomain.com</p>
 
+        <input type="text" name="telephone" placeholder="telephone">
+        <p>Telephone must have 11 digits</p>
+
         <input type="password" name="password" placeholder="password">
         <p>Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
 
